chore: 完成项目多维度迭代优化
- 新增StartTestRunRequest的baseUrl字段
- 修复admin用户密码并添加重置脚本
- 删除冗余的UserRepository和User实体类
- 更新前端构建产物缓存版本
- 为SysUser新增roles和permissions字段
- 导入Arrays工具类到FactController
- 扩展FrontendPageFact的页面位置信息
- 添加BCrypt密码生成工具类
- 修复前端dist资源引用路径
- 重命名LoginResponse的displayName为nickname
- 修复单元测试的MockMvc注解导入
- 更新后端依赖版本和配置
- 实现LlmGateway和向量服务占位实现
- 扩展FrontendGraphBuilder的API构建能力
- 简化ReviewController依赖注入
- 修复单元测试的delete调用参数
- 配置MybatisPlus的SqlSessionFactory
- 新增图谱查看器的高性能模式
- 更新前端登录页面文案
- 重构系统配置和风险详情组件
- 修复AuthController的用户实体类适配